[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/player/PlayerHurtBox.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 8.0

[node name="HurtBox" type="Area"]
collision_layer = 0
collision_mask = 36
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="InvTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="InvTimer" to="." method="_on_InvTimer_timeout"]
